--- a/client/angular.json
+++ b/client/angular.json
@@ -30,7 +30,8 @@
     
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-smart-modal/ngx-smart-modal.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
