--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@swimlane/ngx-datatable": "^15.0.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "ng-bootstrap-form-validation": "^4.0.0",
+    "ngx-pagination": "^4.1.0",
+    "ngx-smart-modal": "^7.1.1",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
